--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -19,9 +19,9 @@
     <h1>Hello, Word !!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é o seu nome ?')
+        window.alert('Minha primeira mensagem !')
+        window.confirm('Está gostando de JS ?') // Janela com botão Ok e cancel
+        window.prompt('Qual é o seu nome ?') //Vai perguntar o nome, que terá que ser digitado pelo usuário
     </script>
 
 </body>
