entendendo variáveis e seu valores

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -16,13 +16,26 @@
 </head>
 <body>
 
-    <h1>Hello, Word !!</h1>
-    <p>Já me livrei da maldição</p>
-    <script>
-        window.alert('Minha primeira mensagem !')
-        window.confirm('Está gostando de JS ?') // Janela com botão Ok e cancel
-        window.prompt('Qual é o seu nome ?') //Vai perguntar o nome, que terá que ser digitado pelo usuário
-    </script>
+    <h1>Hello, Word !! JavaScript para Iniciantes.</h1>
+    <h2>Variáveis</h2>
+    <p>Variáveis são como uma caixa, que serve para guardar algo, elas guardão valores, 
+       outro exemplo, é que elas podem ser como uma vaga em um estacionamento, que irá 
+       receber um carro, logo ele estará guardado ali.</p>
+    <p>Elas podem ser declaradas de 3 formas em JavaScript : var, let e const.</p>
+    <p>Obs: const não pode ter seu valor alterado depois de declarado, ao contrário 
+       de var e let. 
+    </p>
+    <h2>Escopo</h2>
+    <p>O escopo em javascript define a limitação e visibilidade de um bloco de código.</p>
+    <p>Escopo Global: quando a variável é declarada fora de qualquer bloco, sua visibilidade
+       fica disponível em todo o código.
+    </p>
+    <p>Escopo local: quando a variável é declarada dentro de um bloco, sua visibilidade pode
+       ficar disponível ou não.
+    </p>
+    
+
+    <script src="script.js"></script>
 
 </body>
 </html>
