primeiros passos JS ajustes finais concluídos

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro programa...</title>
+    <title>Primeiros passos JS</title>
     <style>
 
         body {
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <h1>Hello, Word !! JavaScript para Iniciantes.</h1>
+    <h1>JavaScript primeiros passos.</h1>
 
     <h2>Variáveis</h2>
     <p>Variáveis são como uma caixa, que serve para guardar algo, elas guardão valores, 
